[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doi2bib"
version = "1.0.0"
description = "Convert DOI numbers or URLs to BibTeX entries from the command line"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["doi", "bibtex", "bibliography", "citations", "research"]
dependencies = [
    "requests>=2.28",
    "pyperclip>=1.8",
]

[project.scripts]
doi2bib = "doi_to_bibtex:main"

[tool.hatch.build.targets.wheel]
# Tells hatch to include doi_to_bibtex.py as a top-level module
packages = ["."]
include = ["doi_to_bibtex.py"]